# Mars

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.bat
Mars/: CMakeLists.txt  Mars.h  mrspch.cpp  mrspch.h
Mars/Engine/Core/: Application.cpp  Application.h  Entrypoint.cpp  Entrypoint.h  Input.cpp  Input.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  Log.h  Memory.h  ResourceManager.cpp  ResourceManager.h  Time.cpp  Time.h  Window.cpp  Window.h
Mars/Engine/Core/Platform/: Platform.h
Mars/Engine/Core/Platform/Win32/: PlatformWin32.cpp  PlatformWin32.h
Mars/Engine/ECS/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.cpp  ScriptableEntity.h
Mars/Engine/ECS/Components/: Components.cpp  Components.h
Mars/Engine/Events/: Events.h
Mars/Engine/ImGui/: MarsImGui.cpp  MarsImGui.h
Mars/Engine/Math/: Math.cpp  Math.h
Mars/Engine/Physics/: Algorithm.cpp  Algorithm.h  Collider.cpp  Collider.h  Physics.cpp  Physics.h  Physics2DLayer.cpp  Physics2DLayer.h
Mars/Engine/Renderer/: Camera.cpp  Camera.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h
Mars/Engine/Renderer/RenderPipelineLayers/: IRenderPipeline.cpp  IRenderPipeline.h  IRenderPipelineLayer.cpp  IRenderPipelineLayer.h
Mars/Engine/Renderer/RenderPipelineLayers/DefaultRenderPipelineLayer/: DefaultRenderPipelineLayer.cpp  DefaultRenderPipelineLayer.h
Mars/Engine/Renderer/RenderPipelineLayers/RenderPipelines/: ImGuiRenderPipeline.cpp  ImGuiRenderPipeline.h  MeshRenderPipeline.cpp  MeshRenderPipeline.h  (+2 more)
Mars/Engine/Renderer/Textures/: HeightMap.cpp  HeightMap.h  Sprite.cpp  Sprite.h
Mars/Engine/Renderer/Vulkan/: VulkanAssetManager.cpp  VulkanAssetManager.h  VulkanInitializers.cpp  VulkanInitializers.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanMesh.cpp  VulkanMesh.h  VulkanStructures.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtils.cpp  VulkanUtils.h
Mars/Engine/SceneGraph/: SceneGraphLayer.cpp  SceneGraphLayer.h
Mars/Engine/Scripting/: NativeScriptComponent.cpp  NativeScriptComponent.h  NativeScriptingLayer.cpp  NativeScriptingLayer.h  Process.cpp  Process.h  ProcessLayer.cpp  ProcessLayer.h
Mars/Engine/Toolbox/: FileToolBox.cpp  FileToolBox.h  PathFindingToolBox.cpp  PathFindingToolBox.h  RandomToolBox.cpp  RandomToolBox.h  SignalToolBox.h  TimeToolBox.cpp  TimeToolBox.h
Mars/Engine/UI/: Font.cpp  Font.h  UI.h  UILayer.cpp  UILayer.h
Mars/Engine/Util/: Utils.cpp  Utils.h
Rover/: CMakeLists.txt  Rover.cpp  Rover.h  UIHelpers.cpp  UIHelpers.h  main.cpp
Rover/Assets/Fonts/: KenneyPixel.yaml
Rover/Assets/Models/: Falcon_Gear_SPECULAR.bp  Falcon_Main_SPECULAR.bp  Stage.boop_obj  Striker_Red.bp  cone.boop_obj  container.boop_obj  cube.boop_obj  grass_blade.boop_obj  lost_empire-Alpha.boop_png  lost_empire-RGB.boop_png  lost_empire-RGBA.boop_png  monkey_smooth.boop_obj  plane.boop_obj  quad.boop_obj  soldier.boop_obj  sphere.boop_obj  white.boop_png
Rover/Assets/Models/millenium_falcon/: Falcon_Details_ILLUMINATION.bp  Falcon_Details_METALLIC.bp  Falcon_Gear_METALLIC.bp  Falcon_Gear_NORMAL.bp  Falcon_Gear_SPECULAR.bp  Falcon_Main_METALLIC.bp  Falcon_Main_SPECULAR.bp  Tex_0095_2.bp
Rover/Assets/Models/ships/: Striker.bp  Zenith.bp
Rover/Assets/Models/textures_container/: Container_BumpMap.boop_jpg  Container_Diff.boop_png  Container_DiffuseMap.boop_jpg  Container_MaskMap.boop_jpg  Container_NormalsMap.boop_png  Container_SpecularMap.boop_jpg
Rover/Assets/Scenes/: Rover.yaml  RoverBasicSetup.yaml
Rover/Assets/Shaders/: cb_shader.frag  cb_shader.tesc  cb_shader.tese  cb_shader.vert  compile_shaders.bat  default_line_shader.frag  default_line_shader.vert  default_shader.frag  default_shader.frag.spv  default_shader.vert  default_shader.vert.spv  offscreen_shader.frag.spv  offscreen_shader.vert  offscreen_shader.vert.spv  offscreen_shadow_map_shader.frag  offscreen_shadow_map_shader.vert  particle_compute_shader.comp  particle_graphics_shader.frag  particle_graphics_shader.vert  post_process_shader.frag  post_process_shader.vert  screen_space_ui_shader.frag  screen_space_ui_shader.vert  sprite_shader.frag  sprite_shader.vert  terrain_shader.frag  terrain_shader.tesc  terrain_shader.tese  terrain_shader.vert
Rover/Assets/Textures/: ChicagoTraffic.boop_jpg  Container_SpecularMap.bp  KenPixel.bp  White.bp  checkered.bp  circle_05.bp  coin.bp  fire_01.bp  flame_02.boop_png  flame_05.bp  green.boop_png  iceland_heightmap.boop_png  lost_empire-RGBA.boop_png  muzzle_02.bp  smoke.bp  smoke_01.boop_png  stars.bp  target_lock.bp  trace_01.bp
Rover/Assets/Textures/Sprites/: target_sheet.bp  target_sheet.yaml
Rover/GameLayer/: GameLayer.cpp  GameLayer.h
Rover/GameLayer/RenderPipelines/: CBRenderPipeline.cpp  CBRenderPipeline.h
Rover/GameLayer/Scripts/: Effect.cpp  Effect.h  GameCamera.cpp  GameCamera.h  GameManager.cpp  GameManager.h  Moon.cpp  Moon.h  Planet.cpp  Planet.h  Player.cpp  Player.h  PlayerCamera.h  PlayerController.h  PlayerShipController.cpp  PlayerShipController.h  Projectile.cpp  Projectile.h  Scrap.cpp  Scrap.h  Ship.cpp  Ship.h  ShipCombat.cpp  ShipCombat.h  ShipMovement.cpp  ShipMovement.h  Spawner.cpp  Spawner.h  Striker.cpp  Striker.h  Unit.cpp  Unit.h
Rover/GameLayer/Scripts/Effects/: Effect.cpp  Effect.h  TargetLockEffect.cpp  TargetLockEffect.h  TracerEffect.cpp  TracerEffect.h
Rover/GameLayer/Scripts/Weapon/: ChargeCanon.cpp  ChargeCanon.h  GravGun.cpp  GravGun.h  Weapon.cpp  Weapon.h
Rover/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Rover/Panels/: HierarchyPanel.cpp  HierarchyPanel.h  IPanel.cpp  IPanel.h  InspectorPanel.cpp  InspectorPanel.h  PerformancePanel.cpp  PerformancePanel.h  Viewport.cpp  Viewport.h
Rover/Panels/Components/: ComponentPanels.cpp  ComponentPanels.h
Rover/Panels/Menus/: MainMenu.cpp  MainMenu.h  Viewport.cpp  Viewport.h
Rover/Scripts/: CameraController.h  EditorManager.cpp  EditorManager.h  Spawner.cpp  Spawner.h
Rover/Scripts/Editor/: CameraController.cpp  CameraController.h  EditorCameraController.cpp  EditorCameraController.h  EditorManager.cpp  EditorManager.h
(+35 files in other folders)
